@@ -100,3 +100,5 @@ void merge_sort(void *collection, void *help_buffer, u64 item_count, u64 item_si
 }
 
 inline bool bytes_match(void *a, void *b, u64 count) { return memcmp(a, b, count) == 0; }
+
+#define swap(a, b, type) { type t = a; a = b; b = t;  }
