@@ -8,7 +8,9 @@
 			This also gets rid of the weird window resize and reposition at startup.
 	- Renderer
 		- Added gfx_read_image_data() to read pixels from a Gfx_Image*
-
+	
+	- Misc
+		- Added examples/sprite_animation.c
 
 ## v0.01.004 - Gamepad input, text wrapping, bug fixes
 	- Input
